# algo_trading_strategies_indian

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AUTHENTICATION.md  CODE_QUALITY.md  COMPLETE_USAGE_GUIDE.md  CREDENTIAL_MIGRATION.md  MIGRATION_GUIDE.md  MULTI_BROKER_GUIDE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  RUNNING_GUIDE.md  TRADING_ANALYTICS.md  UPSTOX_V3_MIGRATION.md  get_upstox_token.py  migrate_credentials.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_dashboard.py  run_examples.py  run_short_straddle.py  upstox_token_manual.py  zerodha_manual_auth.py
.github/workflows/: code-quality.yml  dependencies.yml  security.yml
broker-utilities-zerodha/: test-zerodha-login-using-Selenium-.py  zerodha-kite-connect-auto-login.py
broker-utilities-zerodha/mtm_square_off_zerodha/: zerodha_ltp_subscriber.py  zerodha_mtm_monitor.py
broker-utilities/mtm_square_off_zerodha/: config.yaml  instructions.md  zerodha_ltp_subscriber.py  zerodha_mtm_monitor.py  zerodha_runner.py
brokers/: __init__.py  base.py  config.py  factory.py
brokers/implementations/: __init__.py  kotak.py  upstox.py  zerodha.py
config/: brokers.example.yaml
docs/: UPSTOX_TELEGRAM_GUIDE.md
examples/: analytics_demo.py  dynamic_symbol_selection_strategy.py  example_strategy_with_env.py  upstox_telegram_example.py
historical-data-collection/zerodha-kite-api/: zerodha_kite_historical_data.py
notifications/: __init__.py  broker_notifier.py  telegram_bot.py
short-straddle/0920_short_straddle/: banknifty_0920_short_straddle.py  finnifty_0920_short_straddle.py  nifty50_0920_short_straddle.py  sensex_0920_short_straddle.py
short-straddle/combined_premium/: bank_nifty_combined_premium_short_straddle.py  finnifty_combined_premium_short_straddle.py  nifty50_combined_premium_short_straddle.py  sensex_combined_premium_short_straddle.py
short-straddle/fixed_stop_loss/: bank_nifty_account_level_mtm_with_fixed_stop_loss_short_straddle.py  bank_nifty_fixed_stop_loss_short_straddle.py
short-straddle/mtm_based_target/: bank_nifty_mtm_based_short_straddle.py  nifty50_mtm_based_short_straddle.py.py
short-straddle/percentage_based_stop_loss/: bank_nifty_percentage_based_stop_loss_short_straddle.py
short-straddle/trailing_stop_loss/: bank_nifty_trailing_percentage_based_stop_loss_short_straddle.py
strategies/: __init__.py  base_strategy.py  short_straddle.py
utils/: __init__.py  backtester.py  credentials.py  dashboard.py  historical_data.py  logging_config.py  metrics.py  performance_attribution.py  report_generator.py  strategy_analyzer.py  symbol_selector.py
