# Project Configuration
# =====================
# Modern Python project configuration using pyproject.toml (PEP 518/621)

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algo-trading-strategies-indian"
version = "1.0.0"
description = "Open-source algorithmic trading strategies for Indian stock market (NSE/BSE)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "buzzsubash", email = ""},
]
maintainers = [
    {name = "buzzsubash", email = ""},
]
keywords = [
    "trading",
    "algorithmic-trading",
    "zerodha",
    "kite-connect",
    "nse",
    "bse",
    "options-trading",
    "short-straddle",
    "indian-stock-market"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "NorenRestApiPy>=0.0.23",
    "requests>=2.28.0",
    "kiteconnect>=4.0.0",
    "psycopg2-binary>=2.9.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "pyotp>=2.6.0",
    "python-dotenv>=0.19.0",
    "PyYAML>=6.0",
    "Flask>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pylint>=3.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "pre-commit>=3.4.0",
]

docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/buzzsubash/algo_trading_strategies_india"
Repository = "https://github.com/buzzsubash/algo_trading_strategies_india"
Issues = "https://github.com/buzzsubash/algo_trading_strategies_india/issues"
Documentation = "https://github.com/buzzsubash/algo_trading_strategies_india#readme"

# ==============================================
# Tool Configuration
# ==============================================

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | venv
  | env
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [".venv", "venv", "env", ".git", "__pycache__", "build", "dist"]

[tool.pylint.main]
max-line-length = 120
disable = [
    "C0103",  # Invalid name
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function docstring
    "W0105",  # String statement has no effect
    "R0913",  # Too many arguments
    "R0914",  # Too many local variables
    "R0915",  # Too many statements
    "W0703",  # Broad except clause
]
good-names = ["i", "j", "k", "x", "y", "z", "df", "ce", "pe", "sl", "tp", "pnl", "mtm", "ltp"]
ignore-paths = [
    "^.venv/.*$",
    "^venv/.*$",
    "^env/.*$",
    "^build/.*$",
    "^dist/.*$",
]

[tool.pylint.design]
max-args = 10
max-locals = 20
max-branches = 15

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "env",
    "build",
    "dist",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--cov=utils",
    "--cov=broker-utilities",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["utils", "broker-utilities"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/env/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["/tests", "/venv", "/.venv", "/env"]
skips = ["B404", "B603", "B607"]  # Allow subprocess usage

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/*_test.py"]
